# airbnb-django-backend_2022

./: .gitignore  .gitpod.yml  README.md  build.sh  pyproject.toml  render.yaml
bookings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_booking_host_approval_state_booking_is_cancelled.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_rename_created_category_created_at_and_more.py
common/: models.py  paginations.py  serializers.py
config/: settings.py  urls.py
experiences/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_initial.py  0003_experience_category.py  0004_alter_experience_category_alter_experience_host_and_more.py  0005_rename_created_experience_created_at_and_more.py  0006_experience_event_duration.py
medias/: actions.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py  0003_rename_created_photo_created_at_and_more.py  0004_photo_is_thumbnail.py  0005_alter_video_experience.py
reviews/: admin.py  filters.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_payload.py  0003_alter_review_experience_alter_review_room.py  (+2 more)
rooms/: actions.py  admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+11 files in other folders)
