[tool.poetry]
name = "airbnb-221024"
version = "0.1.0"
description = ""
authors = ["Noru <akang8150@naver.com>"]
readme = "README.md"
packages = [{include = "airbnb_221024"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"
Pillow = "^9.2.0"
djangorestframework = "^3.14.0"
python-dateutil = "^2.8.2"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
