[tool.poetry]
name = "airbnb-221024"
version = "0.1.0"
description = ""
authors = ["Noru <akang8150@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "~4.0"
djangorestframework = "^3.14.0"
python-dateutil = "^2.8.2"
django-environ = "^0.9.0"
django-cors-headers = "^3.13.0"
requests = "^2.28.1"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
